--- a/template/store/my_orders.html
+++ b/template/store/my_orders.html
@@ -18,20 +18,32 @@ My Orders
         margin-top: 15px;
     }
 
-    .product-table {
-        margin-top: 15px;
+    .product-card {
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        margin-bottom: 10px;
     }
 
     .product-img {
-        max-width: 80px; 
-        max-height: 80px; 
+        max-width: 100px; 
+        max-height: 100px; 
         margin-bottom: 10px;
         display: block;
-        margin-right: auto;
+        margin-inline: auto;
     }
 
-    .product-details {
-        text-align: left;
+    .product-info {
+        padding: 10px;
+    }
+
+    .product-name {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .product-price {
+        font-size: 12px;
+        color: #28a745; /* Green color for price */
     }
 
     .action-buttons {
@@ -41,11 +53,27 @@ My Orders
     .action-button {
         margin-right: 10px;
     }
+
+    @media (max-width: 767px) {
+        .product-table {
+            display: none; /* Hide the table on mobile view */
+        }
+
+        .product-card {
+            margin-bottom: 15px;
+        }
+    }
+
+    @media (min-width: 768px) {
+        .product-cards-mobile {
+            display: none; /* Hide mini cards on desktop view */
+        }
+    }
 </style>
 {% endblock styles %}
 
 {% block body %}
-<div class="container">
+<div class="container mt-3">
     <h1 class="mt-4 mb-4">My Orders</h1>
 
     {% if orders %}
@@ -58,12 +86,30 @@ My Orders
                     <p class="card-text">Payment Status: {{ order.payment_status }}</p>
                 </div>
                 <div class="order-details">
-                    <h6 class="card-subtitle mb-2 text-muted">Order Details:</h6>
-                    <table class="table product-table">
+                    <h6 class="card-subtitle mb-2 ms-3 text-muted">Order Details:</h6>
+                    
+                    <!-- Product cards for mobile view -->
+                    <div class="row product-cards-mobile">
+                        {% for item in order.order_items.all %}
+                            <div class="col-6 col-md-4 col-lg-3">
+                                <div class="card product-card">
+                                    <img src="{{ item.product.media_set.first.media_url }}" alt="{{ item.product.name }}" class="card-img-top product-img">
+                                    <div class="card-body product-info">
+                                        <p class="card-text product-name small">{{ item.product.name }}({{ item.quantity }}) X {{ item.item_quantity|floatformat:0 }}</p>
+                                        <p class="card-text product-price">₹{{ item.price }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    
+                    <!-- Product table for desktop view -->
+                    <table class="table product-table text-center">
                         <thead>
                             <tr>
                                 <th scope="col">Product</th>
                                 <th scope="col">Quantity</th>
+                                <th scope="col">Number of Items</th>
                                 <th scope="col">Price</th>
                             </tr>
                         </thead>
@@ -72,11 +118,12 @@ My Orders
                                 <tr>
                                     <td>
                                         <div class="product-details">
-                                            <img src="{{ item.product.img }}" alt="{{ item.product.name }}" class="product-img">
-                                            <p>{{ item.product.name }}</p>
+                                            <img src="{{ item.product.media_set.first.media_url }}" alt="{{ item.product.name }}" class="product-img">
+                                            <p class="text-center">{{ item.product.name }}</p>
                                         </div>
                                     </td>
                                     <td>{{ item.quantity }}</td>
+                                    <td>{{ item.item_quantity|floatformat:0 }}</td>
                                     <td>₹{{ item.price }}</td>
                                 </tr>
                             {% endfor %}
