--- a/template/store/order_placed.html
+++ b/template/store/order_placed.html
@@ -33,7 +33,7 @@ Thank You for Your Order
                 {% endfor %}
                 <tr>
                     <td colspan="2" class="text-center"><strong>Total Price:</strong></td>
-                    <td colspan="1" class="text-left"><strong>₹{{ order.total_price }}</strong></td>
+                    <td colspan="1" class="text-left"><strong>₹{{ order.total_price|floatformat:2 }}</strong></td>
                     <td colspan="1" class="text-left"></td>
                 </tr>
             </tbody>
