--- a/template/index.html
+++ b/template/index.html
@@ -171,8 +171,8 @@
         }
 
         .carousel-item img {
-            object-fit: contain;
-            height: auto;
+            object-fit: cover;
+            height: 200px;
         }
 
         .popup-card {
@@ -327,11 +327,11 @@
 
 <!-- Product Recommendations -->
 <div class="container mt-4">
-    <h2>Best Sellers</h2>
+    <h2 class="text-center">Best Sellers</h2>
     <div class="row product-cards-mobile">
         {% for product in recommended_products %}
         <div class="col-6 col-md-4 col-lg-3 my-2">
-            <div class="card product-card">
+            <div class="card product-card text-center">
                 <div id="carousel{{ product.id }}" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         {% for media in product.media_set.all %}
@@ -380,11 +380,11 @@
 
 <!-- Special Offers Section -->
 <section class="container mt-4">
-    <h2>Special Offers</h2>
+    <h2 class="text-center">Special Offers</h2>
     <div class="row product-cards-mobile">
         {% for product in special_offers_products %}
         <div class="col-6 col-md-4 col-lg-3 my-2">
-            <div class="card product-card">
+            <div class="card product-card text-center">
                 <!-- Image Carousel -->
                 <div id="carousel{{ product.id }}" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -424,7 +424,7 @@
 </section>
 <!-- Product Carousel Section -->
 <section class="container mt-4">
-    <h2>Products</h2>
+    <h2 class="text-center">Products</h2>
     <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             {% for product_chunk in product_chunk_list %}
@@ -432,7 +432,7 @@
                     <div class="row product-cards-mobile">
                         {% for product in product_chunk %}
                             <div class="col-6 col-md-4 col-lg-3 my-2">
-                                <div class="card product-card">
+                                <div class="card product-card text-center">
                                     <div id="carousel{{ product.id }}" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner">
                                             {% for media in product.media_set.all %}
