--- a/template/about.html
+++ b/template/about.html
@@ -42,7 +42,6 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
         max-width: 100%;
         height: auto;
         border-radius: 8px;
-        margin-top: 20px;
     }
 
     /* Responsive styles */
@@ -77,7 +76,7 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 {% endblock styles %}
 
 {% block body %}
-<div class="hero-section">
+<div class="mt-5 text-center">
     <h1>SNEH-SATTVA COLD PRESSED OIL</h1>
     <p class="text-black">🌱 Your Gateway to Health and Tradition 🌱</p>
 </div>
@@ -86,8 +85,8 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 <section class="about-content">
     <div class="container">
         <div class="row">
+            <h2 class="text-center mb-5">About Us</h2>
             <div class="col-lg-6">
-                <h2>About Us</h2>
                 <p>The team at Snehsattva Oils is immensely focused on bringing food that our ancestors consumed for thousands
                     of years and making it available to everyone at affordable prices.</p>
                 <p>Our journey has humble beginnings. Our mission is to help customers live a healthy life with affordable
@@ -105,15 +104,15 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 <section class="about-content">
     <div class="container">
         <div class="row">
+            <h2 class="text-center mb-5">Our Mission</h2>
             <div class="col-lg-6">
-                <h2>Our Mission</h2>
                 <p>That is the way of life our ancestors suggested us and we are here to help you follow a healthy and happy
                     life with all-natural, chemical-free, and affordable prices.</p>
                 <p>This is our effort to make, promote & deliver amazing things discovered by our ancestors to ensure the
                     well-being of people.</p>
             </div>
             <div class="col-lg-6">
-                <div class="container mt-5">
+                <div class="container">
                     <div class="card">
                         <div class="card-body p-4">
                             <h5 class="card-title">Why Sneh Sattava</h5>
@@ -132,8 +131,8 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 <section class="about-content">
     <div class="container">
         <div class="row">
+            <h2 class="text-center mb-5">Legacy</h2>
             <div class="col-lg-6">
-                <h2>Legacy</h2>
                 <p>This land has a great legacy of thousands of years of culture, traditions, research, and science. Our
                     ancestors shared their wisdom with us through various scriptures, be it Yoga, Ayurved, Rasayanshastra, and
                     many other ancient scriptures. Be it food we eat, Exercise we do, clothes we wear or fragrances we
@@ -154,8 +153,8 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 <section class="about-content">
     <div class="container">
         <div class="row">
+            <h2 class="text-center mb-5">Visit Us</h2>
             <div class="col-lg-12">
-                <h2>Visit Us</h2>
                 <div class="map">
                     <iframe style="border: 0; width: 100%; height: 350px" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15207.914700759355!2d74.040122!3d17.651169!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb0f1842dfb498ca5!2sSneh-Sattva%20Oil%20Mills!5e0!3m2!1sen!2sin!4v1672837028195!5m2!1sen!2sin" frameborder="0" allowfullscreen=""></iframe>
                   </div>
@@ -168,8 +167,8 @@ About Us - SNEH-SATTVA COLD PRESSED OIL
 <section class="about-content">
     <div class="container">
         <div class="row">
+            <h2 class="text-center mb-5">Ecosystem</h2>
             <div class="col-lg-6">
-                <h2>Ecosystem</h2>
                 <p>This thought encouraged us to build an ecosystem that provides a platform for manufacture, sell or look
                     for authentic traditionally made Indian things.</p>
                 <p>With the blend of Online sales, Stores, delivery fleet, exhibitions, and many other channels we intend to
