--- a/template/base.html
+++ b/template/base.html
@@ -151,6 +151,7 @@
             border: #38a509 solid 5px;
             border-top: #1A6F67 solid 5px;
             border-left: #1A6F67 solid 5px;
+            z-index: 3;
         }
 
         .btn-ss {
@@ -229,6 +230,7 @@
             border-radius: 5px;
             padding: 5px;
             padding-bottom: 0;
+            margin-top: -5px;
         }
 
         /* Wobble animation for navbar cart icon */
